# AI-Hardcore-Hackathon

./: .dstack.yml  .env.template  .gitignore  README.md  avilable_gpus.json  dstack_offers.json  gpu_benchmark.py  hello_gpu.dstack.yml  pyproject.toml  test.ipynb  test_dev.py
1_create_dataset/: launch_task.py
1_create_dataset/outputs/: a0gib0h-benchmark-all-models-rtx3090.csv  a0gib0h-benchmark-all-models-rtx3090.txt  enrich_csv_with_gpu_metadata.py  enrich_csv_with_model_metadata.py  parse_log.py
2_benchmark_model_with_existing_dataset/: tpu-gpu.csv
benchkit/: benchmark.py  requirements.txt  runs.jsonl  test1.dstack.yml
create_dataset/: check_model_metadata.py  launch_task.py  run_inferences.py
model_benchmarking_initial_analysis/: model_analysis.ipynb
outputs/: a0gib0h-benchmark-all-models-rtx3090.csv
