[project]
name = "AI-Hardcore-Hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "dstack>=0.19.11",
    "einops>=0.8.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
